--- a/app/src/main/res/menu/menu_barra.xml
+++ b/app/src/main/res/menu/menu_barra.xml
@@ -5,5 +5,7 @@
     <item android:id="@+id/accion_ajustes"
         android:title="Ajustes"
         app:showAsAction="never"/>
-
+    <item android:id="@+id/accion_perfil"
+        android:title="Perfil"
+        app:showAsAction="never"/>
 </menu>
