--- a/app/src/main/res/layout/fragment_lista_jugadores_details.xml
+++ b/app/src/main/res/layout/fragment_lista_jugadores_details.xml
@@ -5,8 +5,7 @@
     android:id="@+id/cl_item"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="30dp"
-    android:layout_marginRight="30dp">
+    android:layout_marginLeft="30dp">
 
     <TextView
         android:id="@+id/players_name"
