--- a/app/src/main/res/layout/activity_victoria.xml
+++ b/app/src/main/res/layout/activity_victoria.xml
@@ -7,6 +7,15 @@
     tools:context=".juego.resultadoPartido.VictoriaActivity"
     android:background="@drawable/pant_victoria">
 
+    <ProgressBar
+        android:id="@+id/spinner"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
     <TextView
         android:id="@+id/barra"
         android:layout_width="221dp"
