--- a/app/src/main/res/layout/fragment_lista_jugadores_details.xml
+++ b/app/src/main/res/layout/fragment_lista_jugadores_details.xml
@@ -5,7 +5,7 @@
     android:id="@+id/cl_item"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="30dp">
+    android:layout_marginLeft="30dp">
 
     <TextView
         android:id="@+id/players_name"
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:text="name"
         android:textColor="@color/red"
-        android:textSize="40dp"
+        android:textSize="30dp"
         android:padding="10dp"
         android:textStyle="bold"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
