--- a/app/src/main/res/navigation/home_grafonav.xml
+++ b/app/src/main/res/navigation/home_grafonav.xml
@@ -17,7 +17,7 @@
 
     <fragment
         android:id="@+id/editarFragment"
-        android:name="es.unex.nbafantasy.home.EditarFragment"
+        android:name="es.unex.nbafantasy.home.editar.EditarFragment"
         android:label="@string/editar_opcion"
         tools:layout="@layout/fragment_editar" >
         <action
@@ -27,7 +27,7 @@
 
     <fragment
         android:id="@+id/listaJugadoresFragment"
-        android:name="es.unex.nbafantasy.home.ListaJugadoresFragment"
+        android:name="es.unex.nbafantasy.home.listaJugadores.ListaJugadoresFragment"
         android:label="@string/listjugador_opcion"
         tools:layout="@layout/fragment_lista_jugadores" >
         <action
@@ -36,7 +36,7 @@
     </fragment>
     <fragment
         android:id="@+id/pantJuegoFragment"
-        android:name="es.unex.nbafantasy.home.PantJuegoFragment"
+        android:name="es.unex.nbafantasy.home.pantJuego.PantJuegoFragment"
         android:label="@string/juego_opcion"
         tools:layout="@layout/fragment_pant_juego" >
         <action
@@ -45,7 +45,7 @@
     </fragment>
     <fragment
         android:id="@+id/resultadoFragment"
-        android:name="es.unex.nbafantasy.home.ResultadoFragment"
+        android:name="es.unex.nbafantasy.home.resultado.ResultadoFragment"
         android:label="@string/resultado_opcion"
         tools:layout="@layout/fragment_resultado" />
     <activity
@@ -55,7 +55,7 @@
         tools:layout="@layout/activity_pantalla_juego" />
     <fragment
         android:id="@+id/listaJugadoresDetailsFragment"
-        android:name="es.unex.nbafantasy.home.ListaJugadoresDetailsFragment"
+        android:name="es.unex.nbafantasy.home.listaJugadores.ListaJugadoresDetailsFragment"
         android:label="Detalles del jugador" >
         <argument
             android:name="nba"
@@ -82,7 +82,7 @@
         tools:layout="@layout/activity_registro" />
     <fragment
         android:id="@+id/editarDetailsFragment"
-        android:name="es.unex.nbafantasy.home.EditarDetailsFragment"
+        android:name="es.unex.nbafantasy.home.editar.EditarDetailsFragment"
         android:label="Detalles del jugador" >
         <argument
             android:name="player"
